# globalcy

./: .gitignore  README.md  pyproject.toml
artifacts/: paper2_ablation_fragile_vs_regular_summary.csv  paper2_ablation_nonfreeness_summary.csv  paper2_collective_mode_loadings.csv  paper2_degeneration_extension_audit.json  paper2_fragile_sector_correlation.csv  paper2_fragile_sector_table.csv  paper2_fragile_sector_table_compact.csv  paper2_fragile_sector_table_compact.md  paper2_fragile_vs_regular_seedwise.csv  paper2_fragile_vs_regular_summary.csv  paper2_fragile_vs_regular_summary.json  paper2_nonfreeness_summary.csv  paper2_nonfreeness_summary.json  paper2_pointwise_diag_global_validation.yaml  paper2_pointwise_diag_local_validation.yaml  paper2_pointwise_diagnostics_manifest.json  paper2_pointwise_diagnostics_run_index.csv  paper2_residual_alignment_table.csv  paper2_residual_summary.csv  paper2_safe_minimal_ablation_cefalu_1_0.yaml
configs/: cefalu_hard_regime_ablation_v1.yaml  cefalu_hard_regime_sweep_v1.yaml  cefalu_lambda_0.yaml  cefalu_lambda_0p75.yaml  cefalu_lambda_0p75_multiseed.yaml  cefalu_lambda_0p75_smoke.yaml  cefalu_lambda_1.yaml  cefalu_lambda_1_multiseed.yaml  cefalu_lambda_1_smoke.yaml  cefalu_lambda_1p5.yaml  cefalu_lambda_3.yaml  quartic_fermat.yaml
docs/: design.md  experiments.md  paper2_degeneration_extension_audit.md  paper2_fragile_sector_join_report.md  paper2_fragile_sector_table_latex.txt  paper2_fragile_sector_table_note.md  paper2_nonfreeness_report.md  paper2_pointwise_diagnostics_export.md  paper2_safe_minimal_rerun_report.md
(+53 files in other folders)
